# biblically-accurate-sampler

./: README.md  biblically_allowed.ipynb  hello.py  infer_biblically.py  pyproject.toml
notebooks/: biblically_allowed_70b.ipynb  biblically_allowed_8b.ipynb
